stack.yaml
---
"AWSTemplateFormatVersion" : "2010-09-09"
Resources:
  secGroupNameSSH:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: 'Allow-SSH-Anywhere'
      GroupDescription: 'Allow SSH access anywhere' 
      SecurityGroupIngress:
        - IpProtocol: 'TCP'
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  secGroupNameHTTP:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: 'Allow-HTTP-Anywhere'
      GroupDescription: 'Allow HTTP access anywhere'
      SecurityGroupIngress:
        - IpProtocol: 'TCP'
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  myEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: 'AWStest'
      ImageId: 'ami-0b9fd8b55a6e3c9d5'
      InstanceType: 't2.micro'
      Monitoring: true
      SecurityGroups:
        - !Ref secGroupNameSSH
        - !Ref secGroupNameHTTP
      UserData: !Base64 |
        #!/bin/bash -ex
        dnf update -y
        dnf install nginx -y
        systemctl start nginx
        systemctl enable nginx
      Tags:
        - Key: 'Name'
          Value: 'NginxTest2'
    launchConfigName:
      Type: AWS::AutoScaling::LaunchConfiguration
      Properties:
        LaunchConfigurationName: 
        AssociatePublicIpAddress: true|false
        IamInstanceProfile: 
        ImageId: 
        EbsOptimized: true|false
        InstanceMonitoring: true|false
        InstanceType: 
        KernelId: 
        KeyName: 
        SecurityGroups:
          - sg-id
        UserData:
          Fn::Base64: !Sub
            #!/bin/bash -ex # your script here
